# diacritical

./: .gitignore  README.md  main.py  pyproject.toml
config/: kererū.toml
diacritical/: config.py  config_parser.py  page_parser.py  search.py
test/: test_config.py  test_config_parser.py  test_page_parser.py  test_search.py
test/config/: test.toml  test2.toml
