[tool.poetry]
name = "diacritical"
version = "0.1.0"
description = ""
authors = ["nzdjb <github@2a1b.com>"]
readme = "README.md"
packages = [{include = "diacritical"}]

[tool.poetry.dependencies]
python = "^3.11"
pwiki = "^1.2.0"
pywikibot = "^7.7.2"
wikitextparser = "^0.51.1"
unidecode = "^1.3.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
